--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,18 +3,17 @@
     android:layout_height="match_parent"
      tools:context=".MainActivity"
     android:id="@+id/relativelayout"
-    android:background="#252525"
-    >
+    android:background="#252525">
 
-        <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/imageView"
         android:adjustViewBounds="true"
-            android:src="@drawable/food"
-        android:layout_centerVertical="true"
+        android:src="@drawable/food"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
 
     <ProgressBar
         style="?android:attr/progressBarStyleHorizontal"
